// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  Should render button icon 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 6,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="back-button"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 30,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Button  Should render button label 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#33adff",
      "borderRadius": 6,
      "justifyContent": "center",
      "marginBottom": 10,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 10,
      "opacity": 1,
    }
  }
  testID="button-2"
>
  <Text
    color="#fff"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 16,
          "marginBottom": 15,
          "marginLeft": 15,
          "marginRight": 15,
          "marginTop": 15,
          "textAlign": "center",
        },
      ]
    }
  >
    demo
  </Text>
</View>
`;
